<resources>
    <string name="app_name">實價登錄</string>
    <string name="tax_response">稅捐處回覆</string>
    <string name="land_response">地政司回覆</string>
    <string name="construction_response">建經公司回覆</string>
    <string name="edit">填寫/修改資料</string>
    <string name="mail">收件匣</string>
    <string name="more">更多</string>
    <string name="change_password">變更密碼</string>
    <string name="forget_password">忘記密碼</string>
    <string name="prompt_id">帳號(身分證/居留證，最長10位)</string>
    <string name="prompt_password">密碼(最長12位)</string>
    <string name="action_sign_in">登入</string>
</resources>