<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context="LoginActivity">

    <EditText
        android:id="@+id/identification"
        android:layout_width="300dp"
        android:layout_height="39dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/prompt_id"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword"
        android:maxLength="10"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ~!@#$%^*&amp;"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="12"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/login"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:background="#FFD306"
        android:enabled="false"
        android:text="@string/action_sign_in"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/changePassword"
            android:layout_width="91dp"
            android:layout_height="32dp"
            android:layout_marginStart="110dp"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="91dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="0dp"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:visibility="gone" />

</LinearLayout>